# ros_humble

./: readme.md
.devcontainer/: Dockerfile  devcontainer.json
install/: local_setup.sh  setup.sh
install/au_bot_description/share/au_bot_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/au_bot_description/share/au_bot_description/config/: controllers.yaml  drive.rviz  mapper_params_online_async.yaml  ros_gz_bridge_gazebo.yaml
install/au_bot_description/share/au_bot_description/launch/: display.launch.py  gazebo.launch.py  launch_robot.launch.py  localization.launch.py  navigation.launch.py  online_async_launch.py
install/au_bot_description/share/au_bot_description/meshes/: base_link.stl  caster_1.stl
install/au_bot_description/share/au_bot_description/urdf/: au_bot.gazebo  au_bot.xacro  materials.xacro
install/au_bot_description/share/au_bot_description/world/: test.world
install/diffdrive_arduino/share/diffdrive_arduino/: package.sh
install/ldlidar_stl_ros2/lib/ldlidar_stl_ros2/: ldlidar_stl_ros2_node
install/ldlidar_stl_ros2/share/ldlidar_stl_ros2/: package.sh
install/ldlidar_stl_ros2/share/ldlidar_stl_ros2/launch/: ld19.launch.py
install/serial/share/serial/: package.sh
install/serial_motor_demo/share/serial_motor_demo/: package.sh
install/serial_motor_demo_msgs/share/serial_motor_demo_msgs/: local_setup.sh  package.sh
log/: latest_build
src/au_bot_description/: package.xml  setup.py
src/au_bot_description/config/: nav2_params.yaml
src/au_bot_description/launch/: gazebo.launch.py
src/au_bot_description/map/: map_save.pgm  map_save.yaml  map_serial.data
src/au_bot_description/meshes/: left_wheel_1.stl  lidar_1.stl  right_wheel_1.stl
src/au_bot_description/urdf/: au_bot.ros2control  au_bot.trans  gz_control.xacro  sensor_plugin.xacro
src/sensor/ldlidar_stl_ros2/launch/: ld19.launch.py
src/sensor/serial/: CMakeLists.txt
(+1 files in other folders)
